# webview_java

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-natives.yml  test-build.yml
core/: build.gradle.kts  pom.xml
core/src/main/java/dev/webview/: Webview.java  WebviewNative.java
core/src/main/java/dev/webview/bridge/: JavascriptFunction.java  JavascriptObject.java  JavascriptValue.java  WebviewBridge.java
core/src/main/resources/dev/webview/bridge/: BridgeScript.js
core/src/main/resources/dev/webview/natives/aarch64-macos/: libwebview.dylib
core/src/main/resources/dev/webview/natives/x86_64-macos/: libwebview.dylib
examples/: build.gradle.kts  pom.xml
examples/src/main/java/dev/webview/examples/: BridgeExample.java  HelloWorld.java
native/: CMakeLists.txt  build.sh  webview.def  webview_wrapper.cc
